# rust_kernel

./: Cargo.toml
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
test/: basic_boot.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
