[package]
name = "blog_os"
version = "0.1.0"
edition = "2024"

[profile.dev]

[profile.release]

[[bin]]
name = "blog_os"
test = true
bench = false

[[test]]
name = "basic_boot"
harness = false

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
spin = "0.5.2"
bootloader = {  version = "0.9", features = ["map_physical_memory"]}
volatile = "0.2.6"
x86_64 = "0.14.2"
uart_16550 = "0.2.17"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dev-dependencies]
volatile = "0.2.6"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
    ]
test-success-exit-code = 33
test-timeout = 100

[package.metadata.bootloader]
physical-memory-offset = "0xFFFF800000000000"


